# teachbase

./: README.md  docker-compose.yml  manage.py  pyproject.toml
accounts/migrations/: 0001_initial.py
courses/: admin.py  models.py  serializers.py  urls.py
courses/management/commands/: get_token.py  teachbase_import.py
courses/migrations/: 0001_initial.py
teachbase/: asgi.py  settings.py  urls.py  wsgi.py
